using UnityEngine;

namespace Unknown.Samuele
{
    public class AnimHash
    {
        // Window
        public static int WindowOn = Animator.StringToHash("WindowOn");

        // Characters
        public static int Walking = Animator.StringToHash("isWalking");
        public static int Siting = Animator.StringToHash("isSitting");
        public static int Dance1 = Animator.StringToHash("Dance1");
        public static int Dance2 = Animator.StringToHash("Dance2");
    }
}
